--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.6.3",
+    "cheerio": "^1.0.0-rc.12",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
