--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@tanstack/react-query": "^5.59.0",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scrycards": "^1.1.2",
+    "react-window": "^1.8.10",
     "vitest": "^2.1.2"
   },
   "devDependencies": {
