--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -16,6 +17,7 @@
     "@mui/material": "^5.16.7",
     "@tanstack/react-query": "^5.59.0",
     "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
     "react": "^18.3.1",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.26.2",
     "react-scrycards": "^1.1.2",
     "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "vitest": "^2.1.2"
   },
   "devDependencies": {
