--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,3 +20,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CARD_CONFLUENCE }}'
           channelId: live
           projectId: card-confluence
+permissions:
+  contents: write
+  checks: write
+  pull-requests: write
